# streamlit

./: Dockerfile  app.py  config.yaml  pyproject.toml  requirements.txt  test_app.py
models/: clouds.csv  v1.pkl
